# knex-selection-challenges

./: Cargo.toml  Dockerfile  README.md  compose.yml
backend/: Cargo.toml
migrations/2025-06-20-184746_create_deputado/: down.sql  up.sql
migrations/2025-06-21-140235_create_expenses/: down.sql  up.sql
migrations/2025-06-23-172551_expenses_view/: down.sql  up.sql
src/: import.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  validate.rs
src/models/: deputado.rs  expense.rs
