[package]
name = "knex-selection-challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = "0.4.41"
anyhow = "1.0.98"
actix-web = "4"
r2d2 = "0.8.10"
actix-multipart = "0.7.2"
tokio = "1.45.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
derive_more = { version = "2.0.1", features = ["display"] }
