[package]
name = "knex-selection-challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2", "serde_json"] }
dotenvy = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
actix-web = "4"
r2d2 = "0.8.10"
actix-multipart = "0.7.2"
futures-core = "0.3.31"
futures-util = "0.3.31"
derive_more = { version = "2.0.1", features = ["display"] }
actix-multipart-test = "0.0.3"
serde_json = "1.0.140"
log = "0.4.27"
colog = "1.3.0"

[[bin]]
name = "knex_app"
path = "src/main.rs"
